--- a/MauiAppHotel/Views/ContratacaoHospedagem.xaml
+++ b/MauiAppHotel/Views/ContratacaoHospedagem.xaml
@@ -6,30 +6,35 @@
              NavigationPage.HasNavigationBar="False"
              BackgroundColor="{StaticResource Gray100}">
 
-    <VerticalStackLayout VerticalOptions="CenterAndExpand"
-                         Padding="10">
-        <Label 
-            Text="Cálculo da Diária!"
-            FontSize="30"
-            TextColor="{StaticResource Primary}"
-            FontFamily="Chango"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    
+    <Grid RowDefinitions="*, Auto" Padding="10">
 
-        <Frame Padding="10">
-            <VerticalStackLayout>
+        
+        <VerticalStackLayout VerticalOptions="CenterAndExpand"
+                             Grid.Row="0"
+                             Padding="10">
+            <Label 
+                Text="Cálculo da Diária!"
+                FontSize="29"
+                TextColor="{StaticResource Primary}"
+                FontFamily="Chango"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center" />
+
+            <Frame Padding="10">
+                <VerticalStackLayout>
 
                 <Grid RowDefinitions="auto, auto"
-                      ColumnDefinitions="*, *, 2*">
+                      ColumnDefinitions="2*, *, 2*">
 
                     <Label Grid.Row="0" Grid.Column="0"
                            Text="Adultos"
-                           FontSize="15"/>
+                           FontSize="25"/>
 
                     <Label Grid.Row="0" Grid.Column="1"
                            TextColor="{StaticResource Primary}"
                            Text="{Binding Value}"
-                           FontSize="15"
+                           FontSize="25"
                            BindingContext="{x:Reference stp_adultos}"/>
 
                     <Stepper Grid.Row="0" Grid.Column="2"
@@ -44,12 +49,12 @@
 
                     <Label Grid.Row="1" Grid.Column="0"
                             Text="Crianças"
-                           FontSize="15"/>
+                           FontSize="25"/>
 
                     <Label Grid.Row="1" Grid.Column="1"
                            TextColor="{StaticResource Primary}"
                            Text="{Binding Value}"
-                           FontSize="15"
+                           FontSize="25"
                            BindingContext="{x:Reference stp_criancas}"/>
 
                     <Stepper Grid.Row="1" Grid.Column="2"
@@ -63,7 +68,9 @@
                 </Grid>
 
                 <Label Text="Escolha uma Suíte"
-                       FontSize="30"/>
+                       FontSize="30"
+                       FontAttributes="Bold" 
+                       TextColor="{StaticResource Primary}"/>
 
                 <Picker x:Name=" pck_quarto"
                         Title="Selecione sua Acomodação">
@@ -73,25 +80,36 @@
                 <Frame Padding="10"
                        Margin="10">
                     <VerticalStackLayout>
-                        <Label Text="Período da Estadia"/>
+                        <Label Text="Período da Estadia"
+                               FontSize="Medium"/>
                         <HorizontalStackLayout>
-                            <Label Text="Check-in:    "/>
+                            <Label Text="Check-in:    "
+                                   FontSize="Body"/>
                             <DatePicker x:Name="dtpck_checkin"
                                         Format="dd/MM/yyyy"/>
 
                         </HorizontalStackLayout>
                         <HorizontalStackLayout>
-                            <Label Text="Check-out: "/>
+                            <Label Text="Check-out: "
+                                   FontSize="Body"/>
                             <DatePicker x:Name="dtpck_checkout"
                                         Format="dd/MM/yyyy"/>
 
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                 </Frame>
-                <Button Text="Avançar"/>
-
+                <Button Text="Avançar" Clicked="Button_Clicked"/>
+                
             </VerticalStackLayout>
-        </Frame>
-    </VerticalStackLayout>
+            </Frame>
+        </VerticalStackLayout>
+
+        
+        <Button Text="Sobre a Desenvolvedora"
+                Clicked="Button_Clicked_1"
+                Margin="15"
+                Grid.Row="1"
+                Grid.ColumnSpan="2"/>
+    </Grid>
 
 </ContentPage>
