--- a/MauiAppHotel/Views/HospedagemContratada.xaml
+++ b/MauiAppHotel/Views/HospedagemContratada.xaml
@@ -2,11 +2,96 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiAppHotel.Views.HospedagemContratada"
-             Title="HospedagemContratada">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="HospedagemContratada"
+             NavigationPage.HasNavigationBar="False"
+             BackgroundColor="{StaticResource Gray100}">
+
+    <Grid>
+
+
+        <Image Source="hotel.jpg"
+           Aspect="Center" 
+           HorizontalOptions="Center"
+           VerticalOptions="CenterAndExpand"
+           Opacity="10" />
+
+        <BoxView HorizontalOptions="Fill"
+             VerticalOptions="Fill"
+             Opacity="0.5">
+
+            <BoxView.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="black" Offset="0.0" />
+                    <GradientStop Color="#2B3A67" Offset="1.0" />
+
+                </LinearGradientBrush>
+            </BoxView.Background>
+        </BoxView>
+
+        <VerticalStackLayout VerticalOptions="CenterAndExpand">
+
+            <Label Text="Suíte Super Luxo"
+               TextColor="{StaticResource Primary}"
+               FontFamily="Coustard"
+               FontSize="40" 
+               HorizontalTextAlignment="Center"/>
+
+            <Frame BackgroundColor="#D6D0C7" Opacity="0.90" Margin="10">
+                <Grid RowDefinitions="auto, auto" ColumnDefinitions="*, *">
+                    
+                        <HorizontalStackLayout Grid.Row="0" Grid.Column="0">
+                        <Label Text="Adultos: " FontSize="20" TextColor="#2B3A67"/>
+                        <Label Text="2" FontSize="20" TextColor="white"/>
+                    </HorizontalStackLayout>
+
+                        <HorizontalStackLayout Grid.Row="0" Grid.Column="1">
+                        <Label Text="Crianças: " FontSize="20" TextColor="#2B3A67"/>
+                        <Label Text="1" FontSize="20" TextColor="white"/>
+                    </HorizontalStackLayout>
+
+                   
+                </Grid>
+
+            </Frame >
+
+            <Frame Margin="10" BackgroundColor="#D6D0C7" Opacity="0.90" >
+
+                <Grid RowDefinitions="auto, auto" ColumnDefinitions="*, *, *">
+
+                    <Label Grid.Row="0" Grid.Column="0"
+                       Text="Check-in" TextColor="#2B3A67"/>
+                    <Label Grid.Row="0" Grid.Column="1"
+                       Text="Check-out" TextColor="#2B3A67"/>
+                    <Label Grid.Row="0" Grid.Column="2"
+                       Text="Estadia" TextColor="#2B3A67"/>
+
+                    <Label Grid.Row="1" Grid.Column="0"
+                       Text="06/11/2024" TextColor="white"/>
+                    <Label Grid.Row="1" Grid.Column="1"
+                       Text="06/11/2024" TextColor="white"/>
+                    <Label Grid.Row="1" Grid.Column="2"
+                       Text="06/11/2024" TextColor="white"/>
+
+
+                </Grid>
+
+            </Frame>
+
+            <Frame Margin="10" BackgroundColor="#D6D0C7" Opacity="0.90">
+
+                <HorizontalStackLayout>
+
+                    <Label Text="Valor total: " TextColor="#2B3A67"/>
+                    <Label Text="R$ 750,00" TextColor="white"/>
+
+                </HorizontalStackLayout>
+
+            </Frame>
+
+            <Button Text="Voltar" 
+        HorizontalOptions="Center"
+        Clicked="Button_Clicked"/>
+
+        </VerticalStackLayout>
+    </Grid>
 </ContentPage>
